6771 end-of-loop code not reached in common/dnssd_clientstub.c Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: "Garrett D'Amore" <garrett@damore.org> Approved by: Robert Mustacchi <rm@joyent.com>